--- a/research/bjj_single_video_llm_prototype.ipynb
+++ b/research/bjj_single_video_llm_prototype.ipynb
@@ -105,7 +105,7 @@
     "import google.generativeai as genai\n",
     "\n",
     "# 1. Configure API key\n",
-    "genai.configure(api_key=\"AIzaSyB3o-l94B-Gxw4YyWq6fcYJT5iMza85eiw\")\n",
+    "genai.configure(api_key=\"no_need_for_key_anymore\")\n",
     "\n",
     "# 2. Load the Gemini model\n",
     "model = genai.GenerativeModel(\"gemini-1.5-pro\")  # Use \"gemini-1.5-pro-vision\" if available\n",
@@ -164,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
